# hy-computational-statistics-2023

./: CompStats_home_exam_2023-10.ipynb  Lecture 01 exercises_solutions.ipynb  Lecture 02 exercises.ipynb  Lecture 04 exercises_solutions.ipynb  Lecture 05 exercises.ipynb  Lecture 10 exercises.ipynb  Lecture 11 exercises_solutions (2).ipynb  Lecture 12 exercises_solutions.ipynb  Lecture 13 exercises_solutions.ipynb  Week 1 exercises.ipynb  Week 2 exercises.ipynb  Week 4 exercises.ipynb  Week 5 exercises.ipynb  Week-6-exercises.ipynb  heart_data.txt  pymc-intro.ipynb  pyproject.toml
exam/: gpt-question-1.txt  gpt-question-2.txt  question_2.py
old/: Lecture 01 exercises.ipynb  Lecture 02 exercises.ipynb  Lecture 02 exercises_solutions.ipynb  Lecture 04 exercises.ipynb  Lecture 05 exercises_solutions.ipynb  Lecture 07 exercises.ipynb  Lecture 07 exercises_solutions.ipynb  Lecture 08 exercises_solutions.ipynb  Week 1 exercises.ipynb  Week 2 exercises.ipynb  Week 3 exercises.ipynb  Week 4 exercises.ipynb
week2/: Lecture 04 exercises.ipynb  Lecture 04 exercises_solutions .ipynb  Week 2 exercises.ipynb
week3/: Lecture 06 exercises .ipynb  Lecture 06 exercises_solutions (1).ipynb  Week 3 exercises.ipynb
