[tool.poetry]
name = "computational-statistics"
version = "0.1.0"
description = ""
authors = ["sjack"]
readme = "README.md"
packages = [{include = "computational_statistics"}]

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
pymc = "^5.0.2"
jax = "^0.4.3"
numpy = "^1.23"
notebook = "^6.5.2"
jupyter = "^1.0.0"
jaxlib = "^0.4.3"
numpyro = "^0.11.0"
scipy = "^1.10.1"
seaborn = "^0.12.2"
ipython = "^8.15.0"
scikit-learn = "^1.3.1"
torch = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
